avoid name clashes with GSocket from glib 2.21+ (closes #10883)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_8_BRANCH@61009 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775